<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style = "@style/title_settings"
        android:id="@+id/title"
        android:text="@string/s_t_your_children"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        style = "@style/description_settings"
        android:id = "@+id/description"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text = "@string/s_d_your_children"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="160dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        style="@style/secondButton"
        android:id = "@+id/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text = "@string/bt_later"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        style="@style/mainButton"
        android:id = "@+id/buttonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text = "@string/bt_next"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

