<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style = "@style/title_settings"
        android:id="@+id/title"
        android:text="@string/bt_sign_in"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id = "@+id/first_place"
        style="@style/card_text_edit_holder"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="70dp">

        <EditText
            style="@style/edit_text_settings"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_mail"
            android:id = "@+id/first_field"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_text_edit_holder"
        android:id = "@+id/second_place"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/first_place"
        android:layout_marginTop="10dp">

        <EditText
            style="@style/edit_text_settings"
            android:id = "@+id/second_field"
            android:layout_width="match_parent"
            android:hint="@string/hint_accept_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        style = "@style/warning_settings"
        android:id = "@+id/warning"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/second_place"
        android:text = "@string/warn_enter"
        />

    <Button
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:id = "@+id/buttonNext"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text = "@string/bt_sign_in"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <Button
        style="@style/secondButton"
        android:layout_width="match_parent"
        android:id = "@+id/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text = "@string/bt_sign_up"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

