<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style = "@style/title_settings"
        android:id="@+id/title"
        android:text="@string/s_t_their_school"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        style = "@style/description_settings"
        android:id = "@+id/description"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text = "@string/s_d_their_school"
        />

    <com.google.android.material.card.MaterialCardView
        android:id = "@+id/first_place"
        style="@style/card_text_edit_holder"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_marginTop="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            style="@style/edit_text_settings"
            android:layout_width="match_parent"
            android:hint="@string/hint_school"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id = "@+id/first_field"
            />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src = "@drawable/ic_arrow_drop_down_black_24dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_text_edit_holder"
        android:id = "@+id/second_place"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_place"
        app:layout_constraintEnd_toStartOf="@id/third_place"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            style="@style/edit_text_settings"
            android:id = "@+id/second_field"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hint_grade"
            />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src = "@drawable/ic_arrow_drop_down_black_24dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        style="@style/card_text_edit_holder"
        android:id = "@+id/third_place"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/first_place"
        app:layout_constraintStart_toEndOf="@id/second_place"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/edit_text_settings"
                android:id = "@+id/third_field"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/hint_letter"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src = "@drawable/ic_arrow_drop_down_black_24dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        style = "@style/warning_settings"
        android:id = "@+id/warning"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/second_place"
        android:text = ""
        />

    <CheckBox
        android:id="@+id/freeCheck"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@id/free"
        app:layout_constraintTop_toBottomOf="@id/second_place"
        android:layout_height="wrap_content"/>
    <TextView
        style = "@style/title_settings"
        android:id = "@+id/free"
        android:fontFamily="@font/heebo_regular"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_place"
        android:text = "Льготное питание"
        />
    <Button
        style="@style/secondButton"
        android:id = "@+id/delete_child"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text = "@string/bt_delete_child"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        />
    <Button
        style="@style/mainButton"
        android:id = "@+id/buttonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text = "@string/bt_next"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

